--- a/src/main/resources/assets/boss_tools/lang/ko_kr.json
+++ b/src/main/resources/assets/boss_tools/lang/ko_kr.json
@@ -1,6 +1,6 @@
 {
   "item.boss_tools.fuel_bucket": "연료 양동이",
-  "item.boss_tools.oil_bucket": "Oil Bucket",
+  "item.boss_tools.oil_bucket": "기름 양동이",
   "item.boss_tools.star_crawler_spawn_egg": "Star Crawler 생성 알",
   "item.boss_tools.iron_engine": "철 엔진",
   "item.boss_tools.oxygen_tank": "산소 탱크",
@@ -60,12 +60,12 @@
   "itemGroup.tab_spawn_eggs": "Space-Bosstools: 생성 알",
   "itemGroup.tab_materials": "Space-Bosstools: 재료",
 
-  "block.boss_tools.coal_lantern": "Coal Lantern",
+  "block.boss_tools.coal_lantern": "석탄 랜턴",
   "block.boss_tools.oxygen_bullet_generator": "산소 탄 생성기",
   "block.boss_tools.block_of_blue_iron_plating": "청금 철 판 블록",
   "block.boss_tools.mercury_iron_ore": "수성 철 광석",
   "block.boss_tools.fuel": "연료",
-  "block.boss_tools.oil": "Oil",
+  "block.boss_tools.oil": "기름",
   "block.boss_tools.block_of_rusted_iron_pillar": "녹슨 철 기둥",
   "block.boss_tools.mars_silicon_ore": "화성 실리콘 광석",
   "block.boss_tools.moon_brick_slab": "달 벽돌 반 블록",
@@ -128,8 +128,8 @@
 
   "fluid.boss_tools.fuel": "연료",
   "fluid.fuel": "연료",
-  "fluid.boss_tools.oil": "Oil",
-  "fluid.oil": "Oil",
+  "fluid.boss_tools.oil": "기름",
+  "fluid.oil": "기름",
 
   "entity.boss_tools.mogler": "Mogler",
   "entity.boss_tools.pygro": "Pygro",
@@ -180,5 +180,16 @@
   "job.boss_tools.job10": "도구 대장장이",
   "job.boss_tools.job11": "도살업자",
   "job.boss_tools.job12": "가죽 세공인",
-  "job.boss_tools.job13": "석공"
+  "job.boss_tools.job13": "석공",
+  
+  "block.boss_tools.molten_desh_fluid": "Molten Desh",
+  "fluid.boss_tools.molten_desh": "Molten Desh",
+  "fluid.boss_tools.flowing_molten_desh": "Flowing Molten Desh",
+  "item.boss_tools.molten_desh_bucket": "Molten Desh Bucket",
+  "block.boss_tools.molten_silicon_fluid": "Molten Silicon",
+  "fluid.boss_tools.molten_silicon": "Molten Silicon",
+  "fluid.boss_tools.flowing_molten_silicon": "Flowing Molten Silicon",
+  "item.boss_tools.molten_silicon_bucket": "Molten Silicon Bucket",
+  
+  "_eof": "eof"
 }
