--- a/src/main/resources/assets/boss_tools/lang/ko_kr.json
+++ b/src/main/resources/assets/boss_tools/lang/ko_kr.json
@@ -182,14 +182,39 @@
   "job.boss_tools.job12": "가죽 세공인",
   "job.boss_tools.job13": "석공",
   
-  "block.boss_tools.molten_desh_fluid": "Molten Desh",
-  "fluid.boss_tools.molten_desh": "Molten Desh",
-  "fluid.boss_tools.flowing_molten_desh": "Flowing Molten Desh",
-  "item.boss_tools.molten_desh_bucket": "Molten Desh Bucket",
-  "block.boss_tools.molten_silicon_fluid": "Molten Silicon",
-  "fluid.boss_tools.molten_silicon": "Molten Silicon",
-  "fluid.boss_tools.flowing_molten_silicon": "Flowing Molten Silicon",
-  "item.boss_tools.molten_silicon_bucket": "Molten Silicon Bucket",
+  "block.boss_tools.molten_desh_fluid": "녹은 데쉬",
+  "fluid.boss_tools.molten_desh": "녹은 데쉬",
+  "fluid.boss_tools.flowing_molten_desh": "흐르는 녹은 데쉬",
+  "item.boss_tools.molten_desh_bucket": "녹은 데쉬 양동이",
+  "block.boss_tools.molten_silicon_fluid": "녹은 실리콘",
+  "fluid.boss_tools.molten_silicon": "녹은 실리콘",
+  "fluid.boss_tools.flowing_molten_silicon": "흐르는 녹은 실리콘",
+  "item.boss_tools.molten_silicon_bucket": "녹은 실리콘 양동이",
+  
+  "container.boss_tools.blast_furnace": "용광로",
+  "container.boss_tools.coal_generator": "석탄 발전기",
+  "container.boss_tools.compressor": "압축기",
+  "container.boss_tools.fuel_refinery": "연료 정제기",
+  "container.boss_tools.nasa_workbench": "NASA 작업대",
+  "container.boss_tools.oxygen_bullet_generator": "산소 탄 생성기",
+  "container.boss_tools.oxygen_loader": "산소 충전기",
+  "container.boss_tools.solar_panel": "태양광 발전기",
+  
+  "category.boss_tools.oxygenmaking": "산소 생성",
+  "category.boss_tools.oxygenloading": "산소 충전",
+  
+  "gague_text.boss_tools.using": "%1$s 소모: %2$s/t",
+  "gague_text.boss_tools.generating": "%1$s 발전: %2$s/t",
+  "gague_text.boss_tools.maxgeneration": "%1$s 최대 발전: %2$s/t",
+  "gague_text.boss_tools.total": "총 %1$s: %2$s",
+  "gague_text.boss_tools.stored": "%1$s 저장: %2$s",
+  "gague_text.boss_tools.capacity": "%1$s 용량: %2$s",
+  
+  "gague.boss_tools.energy": "에너지",
+  "gague.boss_tools.oxygen": "산소",
+  "gague.boss_tools.burntime": "남은 연료",
+  "gague.boss_tools.cooktime": "가공 시간",
+  "gague.boss_tools.oxygenloading": "층전",
   
   "_eof": "eof"
 }
