Fill inner bounds of guage element border, fix some lang

--- a/src/main/resources/assets/boss_tools/lang/ko_kr.json
+++ b/src/main/resources/assets/boss_tools/lang/ko_kr.json
@@ -212,7 +212,7 @@
   
   "gague.boss_tools.energy": "에너지",
   "gague.boss_tools.oxygen": "산소",
-  "gague.boss_tools.burntime": "남은 연료",
+  "gague.boss_tools.burntime": "연료",
   "gague.boss_tools.cooktime": "가공 시간",
   "gague.boss_tools.oxygenloading": "층전",
   
