Reworked Villager System
Reworked Villager System

--- a/src/main/resources/assets/boss_tools/lang/en_us.json
+++ b/src/main/resources/assets/boss_tools/lang/en_us.json
@@ -169,19 +169,19 @@
   "death.attack.oxygen": "%1$s couldn\u0027t breathe anymore",
   "death.attack.venus.acid": "%1$s plenty of acid to sacrifice",
 
-  "job.boss_tools.job1": "Farmer",
-  "job.boss_tools.job2": "Fisherman",
-  "job.boss_tools.job3": "Shepheard",
-  "job.boss_tools.job4": "Fletcher",
-  "job.boss_tools.job5": "Librarian",
-  "job.boss_tools.job6": "Cartographer",
-  "job.boss_tools.job7": "Cleric",
-  "job.boss_tools.job8": "Armorer",
-  "job.boss_tools.job9": "Weaponsmith",
-  "job.boss_tools.job10": "Toolsmith",
-  "job.boss_tools.job11": "Butcher",
-  "job.boss_tools.job12": "Leatherworker",
-  "job.boss_tools.job13": "Mason",
+  "entity.boss_tools.alien.farmer": "Farmer",
+  "entity.boss_tools.alien.fisherman": "Fisherman",
+  "entity.boss_tools.alien.shepherd": "Shepherd",
+  "entity.boss_tools.alien.fletcher": "Fletcher",
+  "entity.boss_tools.alien.librarian": "Librarian",
+  "entity.boss_tools.alien.cartographer": "Cartographer",
+  "entity.boss_tools.alien.cleric": "Cleric",
+  "entity.boss_tools.alien.armorer": "Armorer",
+  "entity.boss_tools.alien.weaponsmith": "Weaponsmith",
+  "entity.boss_tools.alien.toolsmith": "Toolsmith",
+  "entity.boss_tools.alien.butcher": "Butcher",
+  "entity.boss_tools.alien.leatherworker": "Leatherworker",
+  "entity.boss_tools.alien.mason": "Mason",
   
   "block.boss_tools.molten_desh_fluid": "Molten Desh",
   "fluid.boss_tools.molten_desh": "Molten Desh",
