--- a/src/main/resources/assets/boss_tools/lang/en_us.json
+++ b/src/main/resources/assets/boss_tools/lang/en_us.json
@@ -208,6 +208,7 @@
   "category.boss_tools.oxygenmaking": "Oxygen Making",
   
   "gague_text.boss_tools.using": "%1$s Using: %2$s/t",
+  "gague_text.boss_tools.using2": "%1$s Using: %2$s/%3$s t",
   "gague_text.boss_tools.generating": "%1$s Generating: %2$s/t",
   "gague_text.boss_tools.maxgeneration": "Max. %1$s Generation: %2$s/t",
   "gague_text.boss_tools.total": "Total %1S: %2$s",
