--- a/src/main/resources/assets/boss_tools/lang/ko_kr.json
+++ b/src/main/resources/assets/boss_tools/lang/ko_kr.json
@@ -169,19 +169,19 @@
   "death.attack.oxygen": "%1$s은(는) 더 이상 숨 쉴 수 없습니다",
   "death.attack.venus.acid": "%1$s은(는) 대량의 산성에 희생되었습니다",
 
-  "job.boss_tools.job1": "농부",
-  "job.boss_tools.job2": "어부",
-  "job.boss_tools.job3": "양치기",
-  "job.boss_tools.job4": "화살 제조인",
-  "job.boss_tools.job5": "사서",
-  "job.boss_tools.job6": "지도 제작자",
-  "job.boss_tools.job7": "성직자",
-  "job.boss_tools.job8": "갑옷 제조인",
-  "job.boss_tools.job9": "무기 대장장이",
-  "job.boss_tools.job10": "도구 대장장이",
-  "job.boss_tools.job11": "도살업자",
-  "job.boss_tools.job12": "가죽 세공인",
-  "job.boss_tools.job13": "석공",
+  "entity.boss_tools.alien.farmer": "농부",
+  "entity.boss_tools.alien.fisherman": "어부",
+  "entity.boss_tools.alien.shepherd": "양치기",
+  "entity.boss_tools.alien.fletcher": "화살 제조인",
+  "entity.boss_tools.alien.librarian": "사서",
+  "entity.boss_tools.alien.cartographer": "지도 제작자",
+  "entity.boss_tools.alien.cleric": "성직자",
+  "entity.boss_tools.alien.armorer": "갑옷 제조인",
+  "entity.boss_tools.alien.weaponsmith": "무기 대장장이",
+  "entity.boss_tools.alien.toolsmith": "도구 대장장이",
+  "entity.boss_tools.alien.butcher": "도살업자",
+  "entity.boss_tools.alien.leatherworker": "가죽 세공인",
+  "entity.boss_tools.alien.mason": "석공",
   
   "block.boss_tools.molten_desh_fluid": "녹은 데쉬",
   "fluid.boss_tools.molten_desh": "녹은 데쉬",
