--- a/src/main/resources/assets/boss_tools/lang/en_us.json
+++ b/src/main/resources/assets/boss_tools/lang/en_us.json
@@ -209,6 +209,7 @@
   
   "gague_text.boss_tools.using": "%1$s Using: %2$s/t",
   "gague_text.boss_tools.using2": "%1$s Using: %2$s/%3$s t",
+  "gague_text.boss_tools.loading": "%1$s Loading: %2$s/t",
   "gague_text.boss_tools.generating": "%1$s Generating: %2$s/t",
   "gague_text.boss_tools.maxgeneration": "Max. %1$s Generation: %2$s/t",
   "gague_text.boss_tools.total": "Total %1S: %2$s",
@@ -220,6 +221,8 @@
   "gague.boss_tools.burntime": "Burn Time",
   "gague.boss_tools.cooktime": "Cook Time",
   "gague.boss_tools.oxygenloading": "Loading",
+  
+  "jei.category.boss_tools.fuel_loading": "Fuel Loading",
   
   "_eof": "eof"
 }
