--- a/src/main/resources/assets/boss_tools/lang/ko_kr.json
+++ b/src/main/resources/assets/boss_tools/lang/ko_kr.json
@@ -209,6 +209,7 @@
   
   "gague_text.boss_tools.using": "%1$s 소모: %2$s/t",
   "gague_text.boss_tools.using2": "%1$s 소모: %2$s/%3$s t",
+  "gague_text.boss_tools.loading": "%1$s 적재: %2$s/t",
   "gague_text.boss_tools.generating": "%1$s 발전: %2$s/t",
   "gague_text.boss_tools.maxgeneration": "%1$s 최대 발전: %2$s/t",
   "gague_text.boss_tools.total": "총 %1$s: %2$s",
@@ -220,6 +221,8 @@
   "gague.boss_tools.burntime": "연료",
   "gague.boss_tools.cooktime": "가공 시간",
   "gague.boss_tools.oxygenloading": "층전",
+  
+  "jei.category.boss_tools.fuel_loading": "연료 적재",
   
   "_eof": "eof"
 }
