start with Clean up Blocks
start with Clean up Blocks

--- a/src/main/resources/assets/boss_tools/lang/en_us.json
+++ b/src/main/resources/assets/boss_tools/lang/en_us.json
@@ -80,7 +80,7 @@
   "block.boss_tools.cracked_moon_brick_slab": "Cracked Moon Brick Slab",
   "block.boss_tools.rocket_launch_pad": "Rocket Launch Pad",
   "block.boss_tools.coal_generator": "Coal Generator",
-  "block.boss_tools.block_of_desh": "Block of Desh",
+  "block.boss_tools.desh_block": "Block of Desh",
   "block.boss_tools.mars_iron_ore": "Mars Iron Ore",
   "block.boss_tools.coal_torch": "Coal Torch",
   "block.boss_tools.nasa_workbench": "§dNASA Workbench",
