Added Water Pump GUI
Added Water Pump GUI

--- a/src/main/resources/assets/boss_tools/lang/en_us.json
+++ b/src/main/resources/assets/boss_tools/lang/en_us.json
@@ -209,7 +209,9 @@
   "container.boss_tools.oxygen_bubble_distributor": "Oxygen Bubble Distributor",
   "container.boss_tools.oxygen_loader": "Oxygen Loader",
   "container.boss_tools.solar_panel": "Solar Panel",
-  
+  "container.boss_tools.water_pump": "Water Pump",
+
+
   "gui.boss_tools.oxygen_bubble_distributor.workingarea.text": "Working Area: %1$sx%2$sx%3$s",
   "gui.boss_tools.oxygen_bubble_distributor.workingarea.show": "Show",
   "gui.boss_tools.oxygen_bubble_distributor.workingarea.hide": "Hide",
