--- a/src/main/resources/assets/boss_tools/lang/en_us.json
+++ b/src/main/resources/assets/boss_tools/lang/en_us.json
@@ -67,18 +67,18 @@
 
   "block.boss_tools.coal_lantern": "Coal Lantern",
   "block.boss_tools.oxygen_bubble_distributor": "Oxygen Bubble Distributor",
-  "block.boss_tools.block_of_blue_iron_plating": "Block of Blue Iron Plating",
+  "block.boss_tools.blue_iron_plating_block": "Block of Blue Iron Plating",
   "block.boss_tools.mercury_iron_ore": "Mercury Iron Ore",
   "block.boss_tools.fuel": "Fuel",
   "block.boss_tools.oil": "Oil",
-  "block.boss_tools.block_of_rusted_iron_pillar": "Block of Rusted Iron Pillar",
+  "block.boss_tools.rusted_iron_pillar_block": "Block of Rusted Iron Pillar",
   "block.boss_tools.mars_silicon_ore": "Mars Silicon Ore",
   "block.boss_tools.moon_brick_slab": "Moon Brick Slab",
   "block.boss_tools.cracked_moon_brick_stairs": "Cracked Moon Brick Stairs",
   "block.boss_tools.flag_cyan": "Cyan Flag",
   "block.boss_tools.flag_light_blue": "Light Blue Flag",
   "block.boss_tools.flag_red": "Red Flag",
-  "block.boss_tools.block_of_iron_plating": "Block of Iron Plating",
+  "block.boss_tools.iron_plating_block": "Block of Iron Plating",
   "block.boss_tools.cracked_moon_brick_slab": "Cracked Moon Brick Slab",
   "block.boss_tools.rocket_launch_pad": "Rocket Launch Pad",
   "block.boss_tools.coal_generator": "Coal Generator",
@@ -88,7 +88,7 @@
   "block.boss_tools.nasa_workbench": "§dNASA Workbench",
   "block.boss_tools.mars_stone": "Mars Stone",
   "block.boss_tools.venus_stone": "Venus Stone",
-  "block.boss_tools.infernal_spire": "Infernal Spire",
+  "block.boss_tools.infernal_spire_block": "Infernal Spire",
   "block.boss_tools.flag_brown": "Brown Flag",
   "block.boss_tools.moon_brick_stairs": "Moon Brick Stairs",
   "block.boss_tools.flag_green": "Green Flag",
@@ -101,7 +101,7 @@
   "block.boss_tools.venus_sand": "Venus Sand",
   "block.boss_tools.mars_diamond_ore": "Mars Diamond Ore",
   "block.boss_tools.fuel_refinery": "Fuel Refinery",
-  "block.boss_tools.block_of_rusted_iron_plating": "Block of Rusted Iron Plating",
+  "block.boss_tools.rusted_iron_plating_block": "Block of Rusted Iron Plating",
   "block.boss_tools.cracked_moon_bricks": "Cracked Moon Bricks",
   "block.boss_tools.venus_diamond_ore": "Venus Diamond Ore",
   "block.boss_tools.moon_stone": "Moon Stone",
@@ -118,7 +118,7 @@
   "block.boss_tools.mercury_stone": "Mercury Stone",
   "block.boss_tools.venus_gold_ore": "Venus Gold Ore",
   "block.boss_tools.solar_panel": "Solar Panel",
-  "block.boss_tools.iron_mark": "Iron Mark",
+  "block.boss_tools.iron_mark_block": "Iron Mark",
   "block.boss_tools.compressor": "Compressor",
   "block.boss_tools.mars_sand": "Mars Sand",
   "block.boss_tools.moon_iron_ore": "Moon Iron Ore",
