--- a/src/main/resources/assets/boss_tools/lang/ko_kr.json
+++ b/src/main/resources/assets/boss_tools/lang/ko_kr.json
@@ -28,12 +28,12 @@
   "item.boss_tools.silicon_ingot": "실리콘 주괴",
   "item.boss_tools.barrel": "통",
   "item.boss_tools.golden_tank": "금 탱크",
-  "item.boss_tools.rocket_nose_cone": "원뿔형 탄두",
+  "item.boss_tools.rocket_nose_cone": "원뿔 탄두",
   "item.boss_tools.compressed_steel": "압축 강철",
   "item.boss_tools.steel_ingot": "강철 주괴",
   "item.boss_tools.wheel": "바퀴",
   "item.boss_tools.iron_tank": "철 탱크",
-  "item.boss_tools.pygro_spawn_egg": "Pygro 생성 알",
+  "item.boss_tools.pygro_spawn_egg": "파이그로 생성 알",
   "item.boss_tools.iron_stick": "철 막대기",
   "item.boss_tools.oxygen_gear": "산소 장치",
   "item.boss_tools.oxygen_mask": "산소 마스크",
@@ -48,45 +48,47 @@
   "item.boss_tools.alien_spawn_egg": "외계인 생성 알",
   "item.boss_tools.chesse": "치즈",
   "item.boss_tools.steel_axe": "강철 도끼",
-  "item.boss_tools.mogler_spawn_egg": "Mogler 생성 알",
+  "item.boss_tools.mogler_spawn_egg": "모글러 생성 알",
   "item.boss_tools.desh_ingot": "데쉬 주괴",
   "item.boss_tools.compressed_desh": "압축 데쉬",
   "item.boss_tools.desh_nugget": "데쉬 조각",
   "item.boss_tools.silicon_nugget": "실리콘 조각",
   "item.boss_tools.steel_nugget": "강철 조각",
+  "item.boss_tools.water_pump": "물 펌프",
+
 
   "itemGroup.tab_normal": "Space-BossTools",
-  "itemGroup.tab_flags": "Space-Bosstools: 깃발",
-  "itemGroup.tab_blocks": "Space-Bosstools: 블록",
-  "itemGroup.tab_basics": "Space-Bosstools: 기본",
-  "itemGroup.tab_machines": "Space-Bosstools: 기계",
-  "itemGroup.tab_spawn_eggs": "Space-Bosstools: 생성 알",
-  "itemGroup.tab_materials": "Space-Bosstools: 재료",
+  "itemGroup.tab_flags": "Space-BossTools: 깃발",
+  "itemGroup.tab_blocks": "Space-BossTools: 블록",
+  "itemGroup.tab_basics": "Space-BossTools: 기본",
+  "itemGroup.tab_machines": "Space-BossTools: 기계",
+  "itemGroup.tab_spawn_eggs": "Space-BossTools: 생성 알",
+  "itemGroup.tab_materials": "Space-BossTools: 재료",
 
   "block.boss_tools.coal_lantern": "석탄 랜턴",
   "block.boss_tools.oxygen_bubble_distributor": "산소 기포 분배기",
-  "block.boss_tools.block_of_blue_iron_plating": "청금 철 판 블록",
+  "block.boss_tools.blue_iron_plating_block": "청금 철 판 블록",
   "block.boss_tools.mercury_iron_ore": "수성 철 광석",
   "block.boss_tools.fuel": "연료",
   "block.boss_tools.oil": "기름",
-  "block.boss_tools.block_of_rusted_iron_pillar": "녹슨 철 기둥",
+  "block.boss_tools.rusted_iron_pillar_block": "녹슨 철 기둥",
   "block.boss_tools.mars_silicon_ore": "화성 실리콘 광석",
   "block.boss_tools.moon_brick_slab": "달 벽돌 반 블록",
   "block.boss_tools.cracked_moon_brick_stairs": "금 간 달 벽돌 계단",
   "block.boss_tools.flag_cyan": "청록색 깃발",
   "block.boss_tools.flag_light_blue": "하늘색 깃발",
   "block.boss_tools.flag_red": "빨간색 깃발",
-  "block.boss_tools.block_of_iron_plating": "철 판 블록",
+  "block.boss_tools.iron_plating_block": "철 판 블록",
   "block.boss_tools.cracked_moon_brick_slab": "금 간 달 벽돌 반 블록",
   "block.boss_tools.rocket_launch_pad": "로켓 발사대",
   "block.boss_tools.coal_generator": "석탄 발전기",
-  "block.boss_tools.block_of_desh": "데쉬 블록",
+  "block.boss_tools.desh_block": "데쉬 블록",
   "block.boss_tools.mars_iron_ore": "화성 철 광석",
   "block.boss_tools.coal_torch": "석탄 횃불",
   "block.boss_tools.nasa_workbench": "§dNASA 작업대",
   "block.boss_tools.mars_stone": "화성 돌",
   "block.boss_tools.venus_stone": "금성 돌",
-  "block.boss_tools.infernal_spire": "Infernal Spire",
+  "block.boss_tools.infernal_spire_block": "지옥불 기둥",
   "block.boss_tools.flag_brown": "갈색 깃발",
   "block.boss_tools.moon_brick_stairs": "달 벽돌 계단",
   "block.boss_tools.flag_green": "초록색 깃발",
@@ -99,14 +101,14 @@
   "block.boss_tools.venus_sand": "금성 모래",
   "block.boss_tools.mars_diamond_ore": "화성 다이아몬드 광석",
   "block.boss_tools.fuel_refinery": "연료 정제기",
-  "block.boss_tools.block_of_rusted_iron_plating": "녹슨 철 블록",
+  "block.boss_tools.rusted_iron_plating_block": "녹슨 철 판 블록",
   "block.boss_tools.cracked_moon_bricks": "금 간 달 벽돌",
   "block.boss_tools.venus_diamond_ore": "금성 다이아몬드 광석",
   "block.boss_tools.moon_stone": "달 돌",
   "block.boss_tools.moon_sand": "달 모래",
   "block.boss_tools.mars_ice_shard_ore": "화성 얼음 광석",
   "block.boss_tools.mercury_cobblestone": "수성 조약돌",
-  "block.boss_tools.sky_stone": "Sky Stone",
+  "block.boss_tools.sky_stone": "운석",
   "block.boss_tools.flag_gray": "회색 깃발",
   "block.boss_tools.wall_coal_torch": "석탄 횃불",
   "block.boss_tools.flag_blue": "파란색 깃발",
@@ -116,7 +118,7 @@
   "block.boss_tools.mercury_stone": "수성 돌",
   "block.boss_tools.venus_gold_ore": "금성 금 광석",
   "block.boss_tools.solar_panel": "태양광 발전기",
-  "block.boss_tools.iron_mark": "Iron Mark",
+  "block.boss_tools.iron_mark_block": "철 표식 블록",
   "block.boss_tools.compressor": "압축기",
   "block.boss_tools.mars_sand": "화성 모래",
   "block.boss_tools.moon_iron_ore": "달 철 광석",
@@ -128,14 +130,16 @@
   "block.boss_tools.flag_lime": "연두색 깃발",
   "block.boss_tools.moon_cheese_ore": "달 치즈 광석",
   "block.boss_tools.moon_desh_ore": "달 데쉬 광석",
+  "block.boss_tools.water_pump": "물 펌프",
+
 
   "fluid.boss_tools.fuel": "연료",
   "fluid.fuel": "연료",
   "fluid.boss_tools.oil": "기름",
   "fluid.oil": "기름",
 
-  "entity.boss_tools.mogler": "Mogler",
-  "entity.boss_tools.pygro": "Pygro",
+  "entity.boss_tools.mogler": "모글러",
+  "entity.boss_tools.pygro": "파이그로",
   "entity.boss_tools.alien": "외계인",
   "entity.boss_tools.alien_zombie": "외계인 좀비",
   "entity.boss_tools.star_crawler": "Star Crawler",
@@ -165,6 +169,8 @@
   "advancements.moon_advancement.descr": "§b달에 진입하세요",
   "advancements.workbench_advancement.descr": "§bNASA 작업대를 제작하세요",
   "advancements.rocket_tier_2_advancement.descr": "§b2 티어 로켓을 제작하세요",
+
+  "effect.boss_tools.oxygen_bubble_effect": "산소 기포",
 
   "key.categories.boss_tools": "Space-Bosstools",
   "key.boss_tools.rocket_start": "로켓 발사",
@@ -203,6 +209,8 @@
   "container.boss_tools.oxygen_bubble_distributor": "산소 기포 분배기",
   "container.boss_tools.oxygen_loader": "산소 충전기",
   "container.boss_tools.solar_panel": "태양광 발전기",
+  "container.boss_tools.water_pump": "물 펌프",
+
   
   "gui.boss_tools.oxygen_bubble_distributor.workingarea.text": "작업 영역: %1$sx%2$sx%3$s",
   "gui.boss_tools.oxygen_bubble_distributor.workingarea.show": "표시",
