--- a/src/main/resources/assets/boss_tools/lang/en_us.json
+++ b/src/main/resources/assets/boss_tools/lang/en_us.json
@@ -19,7 +19,7 @@
   "item.boss_tools.netherite_space_boots": "Netherite Space Boots",
   "item.boss_tools.steel_pickaxe": "Steel Pickaxe",
   "item.boss_tools.space_pants": "Space Pants",
-  "item.boss_tools.tier_1_rocket": "Tier 1 Rocket",
+  "item.boss_tools.rocket_t1": "Tier 1 Rocket",
   "item.boss_tools.diamond_engine": "Diamond Engine",
   "item.boss_tools.space_suit": "Space Suit",
   "item.boss_tools.alien_zombie_spawn_egg": "Alien Zombie Spawn Egg",
@@ -38,9 +38,9 @@
   "item.boss_tools.oxygen_gear": "Oxygen Gear",
   "item.boss_tools.oxygen_mask": "Oxygen Mask",
   "item.boss_tools.steel_sword": "Steel Sword",
-  "item.boss_tools.tier_2_rocket": "Tier 2 Rocket",
+  "item.boss_tools.rocket_t2": "Tier 2 Rocket",
   "item.boss_tools.engine_fan": "Engine Fan",
-  "item.boss_tools.tier_3_rocket": "Tier 3 Rocket",
+  "item.boss_tools.rocket_t3": "Tier 3 Rocket",
   "item.boss_tools.netherite_oxygen_mask": "Netherite Oxygen Mask",
   "item.boss_tools.space_boots": "Space Boots",
   "item.boss_tools.rocket_fin": "Rocket Fin",
