Refactoring Gauge related classes, i18n block, item tooltips

--- a/src/main/resources/assets/boss_tools/lang/ko_kr.json
+++ b/src/main/resources/assets/boss_tools/lang/ko_kr.json
@@ -19,7 +19,7 @@
   "item.boss_tools.netherite_space_boots": "네더라이트 우주복 부츠",
   "item.boss_tools.steel_pickaxe": "강철 곡괭이",
   "item.boss_tools.space_pants": "우주복 하의",
-  "item.boss_tools.tier_1_rocket": "1 티어 로켓",
+  "item.boss_tools.rocket_t1": "1 티어 로켓",
   "item.boss_tools.diamond_engine": "다이아몬드 엔진",
   "item.boss_tools.space_suit": "우주복 상의",
   "item.boss_tools.alien_zombie_spawn_egg": "외계인 좀비 생성 알",
@@ -38,9 +38,9 @@
   "item.boss_tools.oxygen_gear": "산소 장치",
   "item.boss_tools.oxygen_mask": "산소 마스크",
   "item.boss_tools.steel_sword": "강철 검",
-  "item.boss_tools.tier_2_rocket": "2 티어 로켓",
+  "item.boss_tools.rocket_t2": "2 티어 로켓",
   "item.boss_tools.engine_fan": "엔진 팬",
-  "item.boss_tools.tier_3_rocket": "3 티어 로켓",
+  "item.boss_tools.rocket_t3": "3 티어 로켓",
   "item.boss_tools.netherite_oxygen_mask": "네더라이트 산소 마스크",
   "item.boss_tools.space_boots": "우주복 부츠",
   "item.boss_tools.rocket_fin": "로켓 분사구",
@@ -210,7 +210,12 @@
   "container.boss_tools.oxygen_loader": "산소 충전기",
   "container.boss_tools.solar_panel": "태양광 발전기",
   "container.boss_tools.water_pump": "물 펌프",
+  "container.entity.boss_tools.rocket_t1": "1 티어 로켓",
+  "container.entity.boss_tools.rocket_t2": "2 티어 로켓",
+  "container.entity.boss_tools.rocket_t3": "3 티어 로켓",
 
+  "tooltip.boss_tools.oxygen_bubble_distributor": "%1$s ~ %2$s 블록 범위 내 산소 기포 생성",
+  
   
   "gui.boss_tools.oxygen_bubble_distributor.workingarea.text": "작업 영역: %1$sx%2$sx%3$s",
   "gui.boss_tools.oxygen_bubble_distributor.workingarea.show": "표시",
@@ -218,15 +223,17 @@
   
   "category.boss_tools.oxygenmaking": "산소 생성",
   
-  "gague_text.boss_tools.using": "%1$s 소모: %2$s/t",
-  "gague_text.boss_tools.using2": "%1$s 소모: %2$s/%3$s t",
-  "gague_text.boss_tools.generating": "%1$s 발전: %2$s/t",
-  "gague_text.boss_tools.maxgeneration": "%1$s 최대 발전: %2$s/t",
+  "gague_text.boss_tools.using": "%1$s 소모: %2$s",
+  "gague_text.boss_tools.using2": "%1$s 소모: %2$s/%4$s t",
+  "gague_text.boss_tools.generating": "%1$s 발전: %2$s",
+  "gague_text.boss_tools.maxgeneration": "%1$s 최대 발전: %2$s",
   "gague_text.boss_tools.total": "총 %1$s: %2$s",
   "gague_text.boss_tools.stored": "%1$s 저장: %2$s",
   "gague_text.boss_tools.capacity": "%1$s 용량: %2$s",
+  "gague_text.boss_tools.transfer": "%1$s 전송: %2$s",
   
   "gague.boss_tools.energy": "에너지",
+  "gague.boss_tools.fluid": "유체",
   "gague.boss_tools.oxygen": "산소",
   "gague.boss_tools.burntime": "연료",
   "gague.boss_tools.cooktime": "가공 시간",
