--- a/src/main/resources/assets/boss_tools/lang/en_us.json
+++ b/src/main/resources/assets/boss_tools/lang/en_us.json
@@ -214,6 +214,7 @@
   "container.entity.boss_tools.rocket_t2": "Tier 2 Rocket",
   "container.entity.boss_tools.rocket_t3": "Tier 3 Rocket",
 
+  "tooltip.boss_tools.oxygen_bubble_distributor": "Make a Oxygen Bullet %1$s ~ %2$s Blocks",
 
 
   "gui.boss_tools.oxygen_bubble_distributor.workingarea.text": "Working Area: %1$sx%2$sx%3$s",
@@ -222,15 +223,17 @@
   
   "category.boss_tools.oxygenmaking": "Oxygen Making",
   
-  "gague_text.boss_tools.using": "%1$s Using: %2$s/t",
-  "gague_text.boss_tools.using2": "%1$s Using: %2$s/%3$s t",
-  "gague_text.boss_tools.generating": "%1$s Generating: %2$s/t",
-  "gague_text.boss_tools.maxgeneration": "Max. %1$s Generation: %2$s/t",
+  "gague_text.boss_tools.using": "%1$s Using: %2$s",
+  "gague_text.boss_tools.using2": "%1$s Using: %2$s/%4$s t",
+  "gague_text.boss_tools.generating": "%1$s Generating: %2$s",
+  "gague_text.boss_tools.maxgeneration": "Max. %1$s Generation: %2$s",
   "gague_text.boss_tools.total": "Total %1S: %2$s",
   "gague_text.boss_tools.stored": "Stored %1$s: %2$s",
   "gague_text.boss_tools.capacity": "%1$s Capacity: %2$s",
+  "gague_text.boss_tools.transfer": "%1$s Transfer: %2$s",
   
   "gague.boss_tools.energy": "Energy",
+  "gague.boss_tools.fluid": "Fluid",
   "gague.boss_tools.oxygen": "Oxygen",
   "gague.boss_tools.burntime": "Burn Time",
   "gague.boss_tools.cooktime": "Cook Time",
