--- a/src/main/resources/assets/boss_tools/lang/ko_kr.json
+++ b/src/main/resources/assets/boss_tools/lang/ko_kr.json
@@ -223,21 +223,22 @@
   
   "category.boss_tools.oxygenmaking": "산소 생성",
   
-  "gague_text.boss_tools.using": "%1$s 소모: %2$s",
-  "gague_text.boss_tools.using2": "%1$s 소모: %2$s/%4$s t",
-  "gague_text.boss_tools.generating": "%1$s 발전: %2$s",
-  "gague_text.boss_tools.maxgeneration": "%1$s 최대 발전: %2$s",
-  "gague_text.boss_tools.total": "총 %1$s: %2$s",
-  "gague_text.boss_tools.stored": "%1$s 저장: %2$s",
-  "gague_text.boss_tools.capacity": "%1$s 용량: %2$s",
-  "gague_text.boss_tools.transfer": "%1$s 전송: %2$s",
+  "gauge_text.boss_tools.using": "%1$s 소모: %2$s",
+  "gauge_text.boss_tools.using2": "%1$s 소모: %2$s/%4$s t",
+  "gauge_text.boss_tools.generating": "%1$s 발전: %2$s",
+  "gauge_text.boss_tools.maxgeneration": "%1$s 최대 발전: %2$s",
+  "gauge_text.boss_tools.total": "총 %1$s: %2$s",
+  "gauge_text.boss_tools.stored": "%1$s 저장: %2$s",
+  "gauge_text.boss_tools.capacity": "%1$s 용량: %2$s",
+  "gauge_text.boss_tools.transfer": "%1$s 전송: %2$s",
   
-  "gague.boss_tools.energy": "에너지",
-  "gague.boss_tools.fluid": "유체",
-  "gague.boss_tools.oxygen": "산소",
-  "gague.boss_tools.burntime": "연료",
-  "gague.boss_tools.cooktime": "가공 시간",
-  "gague.boss_tools.oxygenloading": "층전",
+  "gauge.boss_tools.energy": "에너지",
+  "gauge.boss_tools.fluid": "유체",
+  "gauge.boss_tools.fuel": "연료",
+  "gauge.boss_tools.oxygen": "산소",
+  "gauge.boss_tools.burntime": "연료",
+  "gauge.boss_tools.cooktime": "가공 시간",
+  "gauge.boss_tools.oxygenloading": "층전",
   
   "_eof": "eof"
 }
