--- a/src/main/resources/assets/boss_tools/lang/ko_kr.json
+++ b/src/main/resources/assets/boss_tools/lang/ko_kr.json
@@ -221,7 +221,7 @@
   "gui.boss_tools.oxygen_bubble_distributor.workingarea.show": "표시",
   "gui.boss_tools.oxygen_bubble_distributor.workingarea.hide": "숨김",
   
-  "category.boss_tools.oxygenmaking": "산소 생성",
+  "jei.tooltip.boss_tools.oil": "  바다에서 찾을 수 있습니다",
   
   "gauge_text.boss_tools.using": "%1$s 소모: %2$s",
   "gauge_text.boss_tools.using2": "%1$s 소모: %2$s/%4$s t",
