--- a/src/main/resources/assets/boss_tools/lang/en_us.json
+++ b/src/main/resources/assets/boss_tools/lang/en_us.json
@@ -11,7 +11,7 @@
   "item.boss_tools.compressed_silicon": "Compressed Silicon",
   "item.boss_tools.ice_shard": "Ice Shard",
   "item.boss_tools.netherite_space_pants": "Netherite Space Pants",
-  "item.boss_tools.engine_casing": "Engine Casing",
+  "item.boss_tools.engine_frame": "Engine Frame",
   "item.boss_tools.diamond_tank": "Diamond Tank",
   "item.boss_tools.steel_shovel": "Steel Shovel",
   "item.boss_tools.golden_engine": "Golden Engine",
