--- a/src/main/resources/assets/boss_tools/lang/ko_kr.json
+++ b/src/main/resources/assets/boss_tools/lang/ko_kr.json
@@ -11,7 +11,7 @@
   "item.boss_tools.compressed_silicon": "압축 실리콘",
   "item.boss_tools.ice_shard": "얼음 조각",
   "item.boss_tools.netherite_space_pants": "네더라이트 우주복 하의",
-  "item.boss_tools.engine_casing": "엔진 케이싱",
+  "item.boss_tools.engine_frame": "엔진 케이싱",
   "item.boss_tools.diamond_tank": "다이아몬드 탱크",
   "item.boss_tools.steel_shovel": "강철 삽",
   "item.boss_tools.golden_engine": "금 엔진",
