--- a/src/main/resources/assets/boss_tools/lang/tr_tr.json
+++ b/src/main/resources/assets/boss_tools/lang/tr_tr.json
@@ -99,144 +99,144 @@
   "block.boss_tools.venus_sand": "Venüs Kumu",
   "block.boss_tools.mars_diamond_ore": "Mars Elması Cevheri",
   "block.boss_tools.fuel_refinery": "Rafineri",
-  "block.boss_tools.rusted_iron_plating_block": "Block of Rusted Iron Plating",
-  "block.boss_tools.cracked_moon_bricks": "Cracked Moon Bricks",
-  "block.boss_tools.venus_diamond_ore": "Venus Diamond Ore",
-  "block.boss_tools.moon_stone": "Moon Stone",
-  "block.boss_tools.moon_sand": "Moon Sand",
-  "block.boss_tools.mars_ice_shard_ore": "Mars Ice Shard Ore",
-  "block.boss_tools.mercury_cobblestone": "Mercury Cobblestone",
-  "block.boss_tools.sky_stone": "Sky Stone",
-  "block.boss_tools.flag_gray": "Gray Flag",
-  "block.boss_tools.wall_coal_torch": "Coal Torch",
-  "block.boss_tools.flag_blue": "Blue Flag",
-  "block.boss_tools.venus_sandstone": "Venus Sandstone",
-  "block.boss_tools.flag_pink": "Pink Flag",
-  "block.boss_tools.flag_purple": "Purple Flag",
-  "block.boss_tools.mercury_stone": "Mercury Stone",
-  "block.boss_tools.venus_gold_ore": "Venus Gold Ore",
-  "block.boss_tools.solar_panel": "Solar Panel",
-  "block.boss_tools.iron_mark_block": "Iron Mark",
-  "block.boss_tools.compressor": "Compressor",
-  "block.boss_tools.mars_sand": "Mars Sand",
-  "block.boss_tools.moon_iron_ore": "Moon Iron Ore",
-  "block.boss_tools.flag_orange": "Orange Flag",
-  "block.boss_tools.steel_block": "Block of Steel",
-  "block.boss_tools.silicon_block": "Block of Silicon",
-  "block.boss_tools.venus_coal_ore": "Venus Coal Ore",
-  "block.boss_tools.blast_furnace": "Blast Furnace",
-  "block.boss_tools.flag_lime": "Lime Flag",
-  "block.boss_tools.moon_cheese_ore": "Moon Cheese Ore",
-  "block.boss_tools.moon_desh_ore": "Moon Desh Ore",
-  "block.boss_tools.water_pump": "Water Pump",
+  "block.boss_tools.rusted_iron_plating_block": "Paslanmış Demir Plaka Bloğu",
+  "block.boss_tools.cracked_moon_bricks": "Kırılmış Ay Tuğlası",
+  "block.boss_tools.venus_diamond_ore": "Venüs Elması Cevheri",
+  "block.boss_tools.moon_stone": "Ay Taşı",
+  "block.boss_tools.moon_sand": "Ay Kumu",
+  "block.boss_tools.mars_ice_shard_ore": "Mars Buz Parçası Cevheri",
+  "block.boss_tools.mercury_cobblestone": "Merkür Kırıktaşı",
+  "block.boss_tools.sky_stone": "Gök Taşı",
+  "block.boss_tools.flag_gray": "Gri Bayrak",
+  "block.boss_tools.wall_coal_torch": "Kömür Meşalesi",
+  "block.boss_tools.flag_blue": "Mavi Bayrak",
+  "block.boss_tools.venus_sandstone": "Venüs Kumtaşı",
+  "block.boss_tools.flag_pink": "Pempe Bayrak",
+  "block.boss_tools.flag_purple": "Mor Bayrak",
+  "block.boss_tools.mercury_stone": "Merkür Taşı",
+  "block.boss_tools.venus_gold_ore": "Venüs Altın Cevheri",
+  "block.boss_tools.solar_panel": "Güneş Paneli",
+  "block.boss_tools.iron_mark_block": "Demir Mark",
+  "block.boss_tools.compressor": "Sıkıştırıcı",
+  "block.boss_tools.mars_sand": "Mars Kumu",
+  "block.boss_tools.moon_iron_ore": "Ay Demiri Cevheri",
+  "block.boss_tools.flag_orange": "Turuncu Bayrak",
+  "block.boss_tools.steel_block": "Çelik Bloğu",
+  "block.boss_tools.silicon_block": "Silikon Bloğu",
+  "block.boss_tools.venus_coal_ore": "Venüs Kömürü Cevheri",
+  "block.boss_tools.blast_furnace": "Maden Fırını",
+  "block.boss_tools.flag_lime": "Açık Yeşil Bayrak",
+  "block.boss_tools.moon_cheese_ore": "Ay Peyniri Cevheri",
+  "block.boss_tools.moon_desh_ore": "Ay Deshi Cevheri",
+  "block.boss_tools.water_pump": "Su Pompası",
 
 
-  "fluid.boss_tools.fuel": "Fuel",
-  "fluid.fuel": "Fuel",
-  "fluid.boss_tools.oil": "Oil",
-  "fluid.oil": "Oil",
+  "fluid.boss_tools.fuel": "Yakıt",
+  "fluid.fuel": "Yakıt",
+  "fluid.boss_tools.oil": "Petrol",
+  "fluid.oil": "Petrol",
 
   "entity.boss_tools.mogler": "Mogler",
   "entity.boss_tools.pygro": "Pygro",
-  "entity.boss_tools.alien": "Alien",
-  "entity.boss_tools.alien_zombie": "Alien Zombie",
+  "entity.boss_tools.alien": "Uzaylı",
+  "entity.boss_tools.alien_zombie": "Uzaylı Zombi",
   "entity.boss_tools.star_crawler": "Star Crawler",
-  "entity.boss_tools.rocket_t1": "Tier 1 Rocket",
-  "entity.boss_tools.rocket_t2": "Tier 2 Rocket",
-  "entity.boss_tools.rocket_t3": "Tier 3 Rocket",
+  "entity.boss_tools.rocket_t1": "Seviye 1 Roket",
+  "entity.boss_tools.rocket_t2": "Seviye 2 Roket",
+  "entity.boss_tools.rocket_t3": "Seviye 3 Roket",
   "entity.boss_tools.lander": "Lander",
   "entity.boss_tools.rover": "Rover",
 
-  "biome.boss_tools.orbit": "Orbit Biome",
+  "biome.boss_tools.orbit": "Yörünge",
   "biome.boss_tools.infernal_venus_barrens_biome": "Infernal Venus Barrens",
-  "biome.boss_tools.venus_biome": "Venus Biome",
-  "biome.boss_tools.mercury_biome": "Mercury Biome",
-  "biome.boss_tools.mars_biome": "Mars Biome",
-  "biome.boss_tools.venus_hills_biome": "Venus Hills Biome",
-  "biome.boss_tools.moon_biome": "Moon Biome",
-  "biome.boss_tools.mercury_magma_biome": "Mercury Biome",
-  "biome.boss_tools.mars_ice_biome": "Mars Ice Biome",
+  "biome.boss_tools.venus_biome": "Venüs",
+  "biome.boss_tools.mercury_biome": "Merkür",
+  "biome.boss_tools.mars_biome": "Mars",
+  "biome.boss_tools.venus_hills_biome": "Venus Tepeleri",
+  "biome.boss_tools.moon_biome": "Ay",
+  "biome.boss_tools.mercury_magma_biome": "Merkür",
+  "biome.boss_tools.mars_ice_biome": "Mars Buzları",
 
-  "advancements.workbench_advancement.title": "NASA Workbench",
-  "advancements.rocket_tier_2_advancement.title": "Tier 2 Rocket",
-  "advancements.rocket_advancement.descr": "§bHas crafted a Tier 1 Rocket",
-  "advancements.rocket_advancement.title": "Tier 1 Rocket",
-  "advancements.moon_advancement.title": "Moon",
-  "advancements.rocket_tier_3_advancement.title": "Tier 3 Rocket",
-  "advancements.rocket_tier_3_advancement.descr": "§bHas crafted a Tier 3 Rocket",
-  "advancements.moon_advancement.descr": "§bHas entered the Moon",
-  "advancements.workbench_advancement.descr": "§bHas crafted a NASA Workbench",
-  "advancements.rocket_tier_2_advancement.descr": "§bHas crafted a Tier 2 Rocket",
+  "advancements.workbench_advancement.title": "NASA Çalışma Masası",
+  "advancements.rocket_tier_2_advancement.title": "Seviye 2 Roket",
+  "advancements.rocket_advancement.descr": "§bSeviye 1 Roket Üret.",
+  "advancements.rocket_advancement.title": "Seviye 1 Roket",
+  "advancements.moon_advancement.title": "Ay",
+  "advancements.rocket_tier_3_advancement.title": "Seviye 3 Roket",
+  "advancements.rocket_tier_3_advancement.descr": "§bSeviye 3 Roket Üret",
+  "advancements.moon_advancement.descr": "§bGötür beni aya aya.",
+  "advancements.workbench_advancement.descr": "§bNasa Çalışma Masası Üret",
+  "advancements.rocket_tier_2_advancement.descr": "§bSeviye 2 Roket Üret",
 
-  "effect.boss_tools.oxygen_bubble_effect": "Oxygen Bubble",
+  "effect.boss_tools.oxygen_bubble_effect": "Oksijen Balonu",
 
   "key.categories.boss_tools": "Space-Bosstools",
-  "key.boss_tools.rocket_start": "Rocket Start",
+  "key.boss_tools.rocket_start": "Roket Başlat",
 
-  "death.attack.oxygen": "%1$s couldn\u0027t breathe anymore",
-  "death.attack.venus.acid": "%1$s plenty of acid to sacrifice",
+  "death.attack.oxygen": "%1$s oksijensiz kaldı.",
+  "death.attack.venus.acid": "%1$s asitte eridi bitti.",
 
-  "entity.boss_tools.alien.farmer": "Farmer",
-  "entity.boss_tools.alien.fisherman": "Fisherman",
-  "entity.boss_tools.alien.shepherd": "Shepherd",
-  "entity.boss_tools.alien.fletcher": "Fletcher",
-  "entity.boss_tools.alien.librarian": "Librarian",
-  "entity.boss_tools.alien.cartographer": "Cartographer",
-  "entity.boss_tools.alien.cleric": "Cleric",
-  "entity.boss_tools.alien.armorer": "Armorer",
-  "entity.boss_tools.alien.weaponsmith": "Weaponsmith",
-  "entity.boss_tools.alien.toolsmith": "Toolsmith",
-  "entity.boss_tools.alien.butcher": "Butcher",
-  "entity.boss_tools.alien.leatherworker": "Leatherworker",
-  "entity.boss_tools.alien.mason": "Mason",
+  "entity.boss_tools.alien.farmer": "Çiftçi",
+  "entity.boss_tools.alien.fisherman": "Balıkçı",
+  "entity.boss_tools.alien.shepherd": "Çoban",
+  "entity.boss_tools.alien.fletcher": "Okçu",
+  "entity.boss_tools.alien.librarian": "Kütüphaneci",
+  "entity.boss_tools.alien.cartographer": "Haritacı",
+  "entity.boss_tools.alien.cleric": "Rahip",
+  "entity.boss_tools.alien.armorer": "Zırh Ustası",
+  "entity.boss_tools.alien.weaponsmith": "Silah Ustası",
+  "entity.boss_tools.alien.toolsmith": "Araç Ustası",
+  "entity.boss_tools.alien.butcher": "Kasap",
+  "entity.boss_tools.alien.leatherworker": "Deri Ustası",
+  "entity.boss_tools.alien.mason": "Taşçı",
   
-  "block.boss_tools.molten_desh_fluid": "Molten Desh",
-  "fluid.boss_tools.molten_desh": "Molten Desh",
-  "fluid.boss_tools.flowing_molten_desh": "Flowing Molten Desh",
-  "item.boss_tools.molten_desh_bucket": "Molten Desh Bucket",
-  "block.boss_tools.molten_silicon_fluid": "Molten Silicon",
-  "fluid.boss_tools.molten_silicon": "Molten Silicon",
-  "fluid.boss_tools.flowing_molten_silicon": "Flowing Molten Silicon",
-  "item.boss_tools.molten_silicon_bucket": "Molten Silicon Bucket",
+  "block.boss_tools.molten_desh_fluid": "Erimiş Desh",
+  "fluid.boss_tools.molten_desh": "Erimiş Desh",
+  "fluid.boss_tools.flowing_molten_desh": "Akan Erimiş Desh",
+  "item.boss_tools.molten_desh_bucket": "Erimiş Desh Kovası",
+  "block.boss_tools.molten_silicon_fluid": "Erimiş Silikon",
+  "fluid.boss_tools.molten_silicon": "Erimiş Silikon",
+  "fluid.boss_tools.flowing_molten_silicon": "Akan Erimiş Silikon",
+  "item.boss_tools.molten_silicon_bucket": "Erimiş Silikon Kovası",
   
-  "container.boss_tools.blast_furnace": "Blast Furnace",
-  "container.boss_tools.coal_generator": "Coal Generator",
-  "container.boss_tools.compressor": "Compressor",
-  "container.boss_tools.fuel_refinery": "Fuel Refinery",
-  "container.boss_tools.nasa_workbench": "NASA Workbench",
-  "container.boss_tools.oxygen_bubble_distributor": "Oxygen Bubble Distributor",
-  "container.boss_tools.oxygen_loader": "Oxygen Loader",
-  "container.boss_tools.solar_panel": "Solar Panel",
-  "container.boss_tools.water_pump": "Water Pump",
-  "container.entity.boss_tools.rocket_t1": "Tier 1 Rocket",
-  "container.entity.boss_tools.rocket_t2": "Tier 2 Rocket",
-  "container.entity.boss_tools.rocket_t3": "Tier 3 Rocket",
+  "container.boss_tools.blast_furnace": "Maden Fırını",
+  "container.boss_tools.coal_generator": "Kömür Jeneratörü",
+  "container.boss_tools.compressor": "Sıkıştırıcı",
+  "container.boss_tools.fuel_refinery": "Rafine",
+  "container.boss_tools.nasa_workbench": "NASA Çalışma Masası",
+  "container.boss_tools.oxygen_bubble_distributor": "Oksijen Balon Dağıtıcısı",
+  "container.boss_tools.oxygen_loader": "Oksijen Yükleyici",
+  "container.boss_tools.solar_panel": "Güneş Paneli",
+  "container.boss_tools.water_pump": "Su Pompası",
+  "container.entity.boss_tools.rocket_t1": "Seviye 1 Roket",
+  "container.entity.boss_tools.rocket_t2": "Seviye 2 Roket",
+  "container.entity.boss_tools.rocket_t3": "Seviye 3 Roket",
 
-  "tooltip.boss_tools.oxygen_bubble_distributor": "Make a Oxygen Bullet %1$s ~ %2$s Blocks",
+  "tooltip.boss_tools.oxygen_bubble_distributor": "%1$s ~ %2$s Blok aralığında oksijen balonu yapar.",
 
 
-  "gui.boss_tools.oxygen_bubble_distributor.workingarea.text": "Working Area: %1$sx%2$sx%3$s",
-  "gui.boss_tools.oxygen_bubble_distributor.workingarea.show": "Show",
-  "gui.boss_tools.oxygen_bubble_distributor.workingarea.hide": "Hide",
+  "gui.boss_tools.oxygen_bubble_distributor.workingarea.text": "Çalışılan Alan: %1$sx%2$sx%3$s",
+  "gui.boss_tools.oxygen_bubble_distributor.workingarea.show": "Göster",
+  "gui.boss_tools.oxygen_bubble_distributor.workingarea.hide": "Gizle",
   
-  "jei.tooltip.boss_tools.oil": "  You can find Oil in the Ocean",
+  "jei.tooltip.boss_tools.oil": "  Okyanousta petrol bulabilirsin.",
   
-  "gauge_text.boss_tools.using": "%1$s Using: %2$s",
-  "gauge_text.boss_tools.using2": "%1$s Using: %2$s/%4$s t",
-  "gauge_text.boss_tools.generating": "%1$s Generating: %2$s",
-  "gauge_text.boss_tools.maxgeneration": "Max. %1$s Generation: %2$s",
-  "gauge_text.boss_tools.total": "Total %1S: %2$s",
-  "gauge_text.boss_tools.stored": "Stored %1$s: %2$s",
-  "gauge_text.boss_tools.capacity": "%1$s Capacity: %2$s",
+  "gauge_text.boss_tools.using": "%1$s Kullanıyor: %2$s",
+  "gauge_text.boss_tools.using2": "%1$s Kullanıyor: %2$s/%4$s t",
+  "gauge_text.boss_tools.generating": "%1$s Üretiyor: %2$s",
+  "gauge_text.boss_tools.maxgeneration": "Maks. %1$s Üretimi: %2$s",
+  "gauge_text.boss_tools.total": "Toplam %1S: %2$s",
+  "gauge_text.boss_tools.stored": "Depolanan %1$s: %2$s",
+  "gauge_text.boss_tools.capacity": "%1$s Kapasitesi: %2$s",
   "gauge_text.boss_tools.transfer": "%1$s Transfer: %2$s",
   
-  "gauge.boss_tools.energy": "Energy",
-  "gauge.boss_tools.fluid": "Fluid",
-  "gauge.boss_tools.fuel": "Fuel",
-  "gauge.boss_tools.oxygen": "Oxygen",
-  "gauge.boss_tools.burntime": "Burn Time",
-  "gauge.boss_tools.cooktime": "Cook Time",
-  "gauge.boss_tools.oxygenloading": "Loading",
+  "gauge.boss_tools.energy": "Enerji",
+  "gauge.boss_tools.fluid": "Sıvı",
+  "gauge.boss_tools.fuel": "Yakıt",
+  "gauge.boss_tools.oxygen": "Oksijen",
+  "gauge.boss_tools.burntime": "Yanma Süresi",
+  "gauge.boss_tools.cooktime": "Pişme Süresi",
+  "gauge.boss_tools.oxygenloading": "Yükleniyor",
   
   "_eof": "eof"
 }
