--- a/src/main/resources/assets/boss_tools/lang/en_us.json
+++ b/src/main/resources/assets/boss_tools/lang/en_us.json
@@ -147,15 +147,15 @@
   "entity.boss_tools.lander": "Lander",
   "entity.boss_tools.rover": "Rover",
 
-  "biome.boss_tools.orbit": "Orbit Biome",
-  "biome.boss_tools.infernal_venus_barrens_biome": "Infernal Venus Barrens",
-  "biome.boss_tools.venus_biome": "Venus Biome",
-  "biome.boss_tools.mercury_biome": "Mercury Biome",
-  "biome.boss_tools.mars_biome": "Mars Biome",
-  "biome.boss_tools.venus_hills_biome": "Venus Hills Biome",
-  "biome.boss_tools.moon_biome": "Moon Biome",
-  "biome.boss_tools.mercury_magma_biome": "Mercury Biome",
-  "biome.boss_tools.mars_ice_biome": "Mars Ice Biome",
+  "biome.boss_tools.orbit": "Orbit",
+  "biome.boss_tools.infernal_venus_barrens": "Infernal Venus Barrens",
+  "biome.boss_tools.venus": "Venus",
+  "biome.boss_tools.mercury": "Mercury",
+  "biome.boss_tools.mars": "Mars",
+  "biome.boss_tools.venus_hills": "Venus Hills",
+  "biome.boss_tools.moon": "Moon",
+  "biome.boss_tools.mercury_magma": "Mercury Magma",
+  "biome.boss_tools.mars_ice_spike": "Mars Ice",
 
   "advancements.workbench_advancement.title": "NASA Workbench",
   "advancements.rocket_tier_2_advancement.title": "Tier 2 Rocket",
