--- a/src/main/resources/assets/boss_tools/lang/ko_kr.json
+++ b/src/main/resources/assets/boss_tools/lang/ko_kr.json
@@ -155,7 +155,7 @@
   "biome.boss_tools.venus_hills": "금성 언덕",
   "biome.boss_tools.moon": "달",
   "biome.boss_tools.mercury_magma": "수성 마그마",
-  "biome.boss_tools.mars_ice_spike": "화성 얼음",
+  "biome.boss_tools.mars_ice_spike": "화성 역고드름",
 
   "advancements.workbench_advancement.title": "NASA 작업대",
   "advancements.rocket_tier_2_advancement.title": "2 티어 로켓",
